<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="8dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/filmImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"
                tools:src="@drawable/poster_infinity_war"
                android:visibility="visible"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorSecondary"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ProgressBar
                android:id="@+id/detailBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
            <RelativeLayout
                android:id="@+id/detailView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                >

                <TextView
                    android:id="@+id/detailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Fantastic Beasts: The Crimes of Grindelwald" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/informationCard"
                    style="@style/CardView.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detailTitle"
                    android:layout_marginTop="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/information"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/information"
                            android:textColor="@color/colorSecondary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVoteAverage"
                            style="@style/CardView.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/information"
                            android:backgroundTint="@color/colorPrimarySecond">

                            <TextView
                                android:id="@+id/detailVoteAverage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:gravity="center"
                                android:textColor="@android:color/white"
                                app:drawableStartCompat="@drawable/logo_vote_average"
                                android:drawablePadding="8dp"
                                tools:text="86" />


                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardPopularity"
                            style="@style/CardView.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/information"
                            android:layout_toEndOf="@id/cardVoteAverage"
                            android:backgroundTint="@color/colorSecondary">

                            <TextView
                                android:id="@+id/detailPopularity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                tools:text="100.000"
                                android:gravity="center"
                                android:drawablePadding="8dp"
                                app:drawableStartCompat="@drawable/logo_popularity" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardReleaseDate"
                            style="@style/CardView.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cardVoteAverage"
                            android:backgroundTint="@color/colorSecondary"
                            app:contentPadding="4dp">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/detailReleaseImage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:src="@drawable/logo_date"
                                    tools:ignore="ContentDescription" />

                                <TextView
                                    android:id="@+id/detailRelease"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:layout_marginStart="4dp"
                                    android:layout_marginEnd="8dp"
                                    android:layout_toEndOf="@id/detailReleaseImage"
                                    android:textColor="@color/colorPrimary"
                                    tools:text="November 21, 2020" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardGenre"
                            style="@style/CardView.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cardReleaseDate"
                            android:backgroundTint="@color/colorPrimarySecond">

                            <TextView
                                android:id="@+id/detailGenre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:maxLines="2"
                                android:textColor="@android:color/white"
                                tools:text="Action,Adventure,Drama,Comedy" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardRuntime"
                            style="@style/CardView.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cardVoteAverage"
                            android:layout_toEndOf="@id/cardReleaseDate"
                            android:backgroundTint="@color/colorSecondary">

                            <TextView
                                android:id="@+id/detailRuntime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:maxLines="1"
                                tools:text="100"
                                android:drawablePadding="8dp"
                                app:drawableStartCompat="@drawable/logo_runtime" />

                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/overviewCard"
                    style="@style/CardView.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/informationCard"
                    android:layout_marginTop="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/overviewText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/overview"
                            android:textColor="@color/colorSecondary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/detailTagLine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/overviewText"
                            android:layout_margin="4dp"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="italic"
                            tools:text="An entire universe. Once and for all." />

                        <TextView
                            android:id="@+id/detailDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/detailTagLine"
                            android:layout_margin="4dp"
                            android:textColor="@android:color/white"
                            tools:text="As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain." />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
